--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,7 @@
 #Asset Files#
 ###########
 */Content/AssetFolderName1
-*/Content/AssetFolderName2
-*/Content/AssetFolderName3
+*/Content/StarterContent
 ##################
 #VS Generated Files#
 #################
